fixed navbar text and spacing

--- a/index.css
+++ b/index.css
@@ -86,18 +86,20 @@ html {
 
 nav ul li {
     margin: 15px;
+    
 }
 
-nav ul li a {
+.navbar ul li a {
     text-decoration: none;
+    margin: 40px;
     color: white;
-    font-size: 1.5em;
+    font-size: 2.5em;
+    font-family: "Spirax", sans-serif;
 }
 .navbar {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000;
 } 
  
 .navbar li a:hover {
